Not deselect all bone when I press the A button in edit mode Human(Meta-Rig) #36128

Closed
opened 2013-07-13 04:00:23 +02:00 by alexis echemendia · 4 comments

%%%--- Operating System, Graphics card ---
Windows 7 Ultimate SP1

Nvidia GTX 460 SE

- Blender version with error, and version that worked ---

with error: 2.67b

- Short description of error ---

The addon Human(Meta-Rig) in edit mode not deselect all bone when I press the A button.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Create a new --> Armature--Human(Meta-Rig) , go to Object Data panel in the Rigify Buttons press Generate, select the new rig and enter in Edit Mode, press A to deselect every bone then press G to move , right now you cant move a few head bone, that is an error, the A button not working. If you press A to select everything and A again the problem continues. Only cant eliminate de problem selecting a particular bone and press A to deselected.

%%%

%%%--- Operating System, Graphics card --- Windows 7 Ultimate SP1 Nvidia GTX 460 SE - Blender version with error, and version that worked --- with error: 2.67b - Short description of error --- The addon Human(Meta-Rig) in edit mode not deselect all bone when I press the A button. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Create a new --> Armature--Human(Meta-Rig) , go to Object Data panel in the Rigify Buttons press Generate, select the new rig and enter in Edit Mode, press A to deselect every bone then press G to move , right now you cant move a few head bone, that is an error, the A button not working. If you press A to select everything and A again the problem continues. Only cant eliminate de problem selecting a particular bone and press A to deselected. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Those bones are marked as not selectable in the outliner no doubt to preserve the rig mechanics%%%

%%%Those bones are marked as not selectable in the outliner no doubt to preserve the rig mechanics%%%

%%%fixed r58250.%%%

%%%fixed r58250.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36128
No description provided.