fix [#36128] Not deselect all bone when I press the A button in edit mode